--- a/CodeCollab/client/index.html
+++ b/CodeCollab/client/index.html
@@ -4,12 +4,14 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Code Sync - A Realtime Code Editor</title>
-        <meta name="title" content="Code Sync - Realtime Code Collaboration" />
+        <meta name="title" content="Code Collab" />
         <meta
             name="description"
-            content="Enjoy real-time collaboration on Code Sync with the unique code editor. Get features like syntax highlighting, auto-suggestions, seamless file editing, saving, and downloading. Communicate with ease through the integrated group chat. Try Code Sync today!"
+            
+
+
         />
-        <meta name="keywords" content="Code, Collaboration, Sync" />
+        <meta name="keywords" />
 
         <link
             rel="apple-touch-icon"
