--- a/CodeCollab/client/index.html
+++ b/CodeCollab/client/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Code Sync - A Realtime Code Editor</title>
+        <title>Code Collab</title>
         <meta name="title" content="Code Collab" />
         <meta
             name="description"
